test/libyul/yulSyntaxTests/bin_assignment_long.yul
{
    let x := bin"00110011001100110011001100110011001100110011001100110011001100110011001100110011001100110011001100110011001100110011001100110011001100110011001100110011001100110011001100110011001100110011001100110011001100110011001100110011001100110011001100110011001100110011001100110011001100110011001100110011001100110011001100110011"
}
// ----
// TypeError 3069: (15-340): String literal too long (40 > 32)
